bootstrap/kubernetes/apps/tools/homebox/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homebox
  namespace: tools
  labels:
    app: homebox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homebox
  template:
    metadata:
      labels:
        app: homebox
    spec:
      securityContext:
        fsGroup: 1000
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: homebox-data
      containers:
        - name: homebox
          image: sysadminsmedia/homebox:0.22.0-rc.2
          imagePullPolicy: IfNotPresent

          volumeMounts:
            - name: data
              mountPath: /data

          ports:
            - name: http
              containerPort: 7745
              protocol: TCP

          livenessProbe:
            tcpSocket:
              port: 7745
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3

          readinessProbe:
            tcpSocket:
              port: 7745
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3

          startupProbe:
            tcpSocket:
              port: 7745
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 30
