bootstrap/kubernetes/apps/tools/homebox/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: homebox
  name: homebox
  namespace: tools
spec:
  type: ClusterIP
  selector:
    app: homebox
  ports:
    - port: 7745
      targetPort: 7745
      protocol: TCP
      name: http
